--- a/contact.html
+++ b/contact.html
@@ -15,21 +15,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="/assets/css/grid.css">
-    <link rel="stylesheet" href="/assets/css/mobile.css">
-    <link rel="stylesheet" href="/assets/css/mobile-repai.css">
+    <link rel="stylesheet" href="assets/css/grid.css">
+    <link rel="stylesheet" href="assets/css/mobile.css">
+    <link rel="stylesheet" href="assets/css/mobile-repai.css">
 
 </head>
-<style>
-    @media (max-width: 739px) {
-        .introduction-decription {
-            position: relative;
-            transform: translate(-50%, -150%);
-        }
-    }
-</style>
-
 <body>
     <div id="main">
         <div class="header">
@@ -81,19 +73,21 @@
         </div>
         <!-- container -->
         <div class="container">
-            <div class="container__introduction">
-                <div style="background:url('https://preview.colorlib.com/theme/unwind/images/xbg_3.jpg.pagespeed.ic.-P-sDxMfPG.webp')  top center / cover no-repeat fixed;"
-                    class="introduction-img">
-                    <div class="overlay"></div>
-                    <div class="introduction-decription">
-                        <a href="index.html">Home
-                            <i class="fas fa-angle-right"></i>
-                        </a>
-                        <p>Contact<i class="fas fa-angle-right"></i></p>
-                        <h1>Contact us</h1>
+            <div class="container__introduction"
+                style="background: url('https://preview.colorlib.com/theme/unwind/images/xbg_3.jpg.pagespeed.ic.-P-sDxMfPG.webp') top center / cover no-repeat fixed;">
+                <div class="overlay"></div>
+                <div class="text-container">
+                    <div class="heading-container" data-aos="fade-up">
+                        <div class="introduction-decription">
+                            <a href="index.html">Home<i class="fas fa-angle-right"></i>
+                            </a>
+                            <p>Contact<i class="fas fa-angle-right"></i></p>
+                            <h1>Contact</h1>
+                        </div>
                     </div>
                 </div>
             </div>
+            <!-- section-contact -->
             <div class="section-contact">
                 <div class="grid wide">
                     <div class="row">
@@ -316,5 +310,15 @@
         </footer>
     </div>
 </body>
-
+<script src="assets/js/app.js"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+    AOS.init(
+        {
+            duration: 1000,
+            once: true
+            //   delay:3000
+        }
+    );
+</script>
 </html>
